perf(ram): heap returns to the OS + memory-pressure cache trims + garbage cuts
RAM-usage pass, three layers:

Heap actually shrinks when idle:
- CDS fork ZGC flags modernized: -XX:+ZGenerational dropped (removed in
  JDK 24, our floor is 25 — it only warned), AlwaysPreTouch dropped for
  ZGC (pre-touch commits the whole heap as resident up-front, which is
  exactly what panels chart as "RAM usage"), ZUncommitDelay=60 added so
  idle pages return to the OS within a minute.
- Fork children with no explicit heap cap get -XX:MaxRAMPercentage=75
  (JVM default is 25% of container/host RAM — a wasted allocation).
- Boot advisor: when ZGC runs without ZUncommitDelay it prints the
  one-line flag fix (plus AlwaysPreTouch note) for panel/inline boots
  the fork path cannot help.

Memory-pressure actuator:
- New MemoryPressure.trimSoftCaches(), fired by self-tune at RED and
  EMERGENCY (5-min throttle): drops the anti-xray scan cache halves,
  entity-visibility verdicts (rebuild in one 500ms TTL) and the geo
  cache — warm-but-idle data stops pinning pages exactly when the
  sensor says memory is the constraint.

Steady-state garbage cuts:
- LagLimits spawn handlers use entity.getChunk() (no Location clone per
  spawn event — mob farms fire these continuously).
- GeoUtil evicts half instead of clear-all at cap (no periodic re-lookup
  bursts); BuildInfo.load() parses the jar resource once instead of per
  /ver / banner / update check.

Boot-verified: clean boot, join to PLAY in 3.4s, clean stop.